# gnome-utils

./: .gitignore  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac
baobab/data/: baobab-main-window.ui
baobab/src/: Makefile.am  baobab-export.c  baobab-export.h  baobab-utils.c  baobab-utils.h  baobab.c  baobab.h  callbacks.c  callbacks.h
gnome-dictionary/data/: Makefile.am  org.gnome.dictionary.gschema.xml.in.in
gnome-dictionary/docs/reference/gdict/: Makefile.am
gnome-dictionary/help/da/: da.po
gnome-dictionary/help/es/: es.po
gnome-dictionary/help/sl/: sl.po
gnome-dictionary/libgdict/: Makefile.am  gdict-1.0.pc.in  gdict-client-context.c  gdict-client-context.h  gdict-context.c  gdict-context.h  gdict-database-chooser.c  gdict-defbox.c  gdict-defbox.h  gdict-source-chooser.c  gdict-source-loader.c  gdict-source-loader.h  gdict-source.c  gdict-source.h  gdict-speller.c  gdict-speller.h  gdict-strategy-chooser.c
gnome-dictionary/src/: Makefile.am  gdict-about.c  gdict-app.c  gdict-app.h  gdict-applet.c  gdict-common.c  gdict-pref-dialog.c  gdict-pref-dialog.h  gdict-print.c  gdict-sidebar.c  gdict-sidebar.h  gdict-source-dialog.c  gdict-window.c  gdict-window.h  main.c
po/: POTFILES.in  POTFILES.skip  ar.po  ast.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  en_GB.po  es.po  et.po  eu.po  fa.po  fr.po  gl.po  gnome-utils-master-po-sk-15637_2.merged.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  lv.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  ta.po  (+8 more)
